--- a/Hosting.html
+++ b/Hosting.html
@@ -21,10 +21,11 @@
 
   <main>
     <div class="container">
-      <p>https://boity-del.github.io/Cultural-Heritage/</p>
+     <link ref="https://boity-del.github.io/Cultural-Heritage/" href="link">
     </div>
   </main>
 </body>
 </html>
+
 
 
