--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     </section>
     
        <p>
-        <h1>Lumela! Welcome to Basotho Cultural Website This website is designed to celebrate and preserve the sophisticated cultural heritage of the Basotho peaople.
+        Lumela! Welcome to Basotho Cultural Website This website is designed to celebrate and preserve the sophisticated cultural heritage of the Basotho peaople.
       It's also about learning more about the Basotho culture. Here we got the Basotho Traditional Clothing, Music and Dances that Basotho perform lastly we offer 
-      Crafts and Art done by Basotho. If you want to explore with us then wyat are you waiting for ,tag along.</h1>
+      Crafts and Art done by Basotho. If you want to explore with us then wyat are you waiting for ,tag along.
       </p>
   </main>
 
@@ -76,5 +76,6 @@
 </body>
 
 </html>
+
 
 
