--- a/traditional clothing.html
+++ b/traditional clothing.html
@@ -88,7 +88,7 @@
     </figure>
     <figure>
       <h2>Basotho ceremonialRobe</h2>
-      <img src="images/basotho ceremonial robee copy.jpeg" alt="Basotho ceremonial robe">
+      <img src="images/basotho ceremonial robee.jpeg" alt="Basotho ceremonial robe">
       <figcaption>Basotho ceremonial robe, used in important rituals.</figcaption>
       <a href="https://www.bing.com/images/search?q=Basotho+ceremonial+robe" target="_blank">Learn more</a>
     </figure>
@@ -233,3 +233,4 @@
   </main>
 </body>
 </html>
+
