--- a/music_and_dance_descriptions.html
+++ b/music_and_dance_descriptions.html
@@ -4,25 +4,26 @@
     <li><strong>Mokhibo Dance:</strong> A traditional Basotho dance characterized by rhythmic foot stamping and graceful arm movements, often performed during celebrations.</li>
     <li><strong>Mohobelo Dance:</strong> A lively dance involving fast footwork and energetic body movements, symbolizing strength and unity among the Basotho people.</li>
     <li><strong>Famo Music and Dance:</strong> A popular Basotho music genre featuring accordion and drum rhythms, accompanied by expressive dance movements.</li>
-    <li><strong>Litolobonya:</strong> A traditional dance performed by young men, showcasing agility and coordination through synchronized steps.</li>
+    <li><strong>Litolobonya:</strong> A traditional dance performed by women, showcasing agility and coordination through synchronized steps and waist movements.</li>
     <li><strong>Lesiba Music:</strong> Music produced using the Lesiba, a unique Basotho musical instrument resembling a stringed bow, known for its soothing sounds.</li>
     <li><strong>Mokopu Music and Dance:</strong> A cultural expression combining melodic tunes and dance steps that narrate Basotho folklore.</li>
     <li><strong>Sekhankula Music:</strong> A traditional music style featuring vocal harmonies and percussion, often performed during communal gatherings.</li>
-    <li><strong>Setolotolo Dance:</strong> A graceful dance performed by women, emphasizing fluid hand and body movements.</li>
-    <li><strong>Thaba Bosiu Dance:</strong> A historical dance commemorating the Basotho resistance, characterized by strong, deliberate steps.</li>
-    <li><strong>Morabaraba Music:</strong> Music associated with the traditional Basotho board game, often played during social events.</li>
+    <li><strong>Setolotolo music:</strong> An instument made of metal sheet, it's often used by herdboys while looking after their animals.</li>
+    <li><strong>Selia-lia:</strong> A traditional dance performed by both girls and boys at the age of marrying,this game is played by the aim of helping them to find their soulmates.</li>
+    <li><strong>ts'ipu dance :</strong> A basotho dance that is performed by young men during ceremonies, they act like monkies walking with hands and feet</li>
     <li><strong>Lesiba Instrument:</strong> A musical bow instrument producing harmonic sounds, integral to Basotho musical heritage.</li>
     <li><strong>Setolo Dance:</strong> A celebratory dance involving rhythmic clapping and foot tapping.</li>
-    <li><strong>Leqapha Dance:</strong> A dance performed during harvest festivals, symbolizing gratitude and prosperity.</li>
+    <li><strong>Moqoqopelo:</strong> A dance performed by young basotho girls, accompanied by strong but yet energitic movements.</li>
     <li><strong>Makoloane Dance:</strong> A warrior dance showcasing strength and agility through vigorous movements.</li>
     <li><strong>Seshoeshoe Music:</strong> Traditional music featuring string instruments and drums, accompanying folk dances.</li>
-    <li><strong>Letata Dance:</strong> A social dance performed at weddings and communal celebrations.</li>
-    <li><strong>Liletswa Music:</strong> Instrumental music played using traditional Basotho instruments, often during storytelling sessions.</li>
-    <li><strong>Mokorotlo Dance:</strong> A dance named after the Basotho traditional hat, symbolizing cultural pride.</li>
+    <li><strong>Pina tsa mekhorong:</strong> The Basotho traditional music performed at night, and there are competitins.</li>
+    <li><strong>The Tsolo:</strong> Instrument in the Basotho music known for it's rhythimic complilexity and the energy it brings to perrfomance. The tradition drum is typically made of wood and animal skin.</li>
+    <li><strong>Mokorotlo Music </strong> A misic that is sang by elders when the young men are going to initiation school.</li>
     <li><strong>Basotho Blanket Dance:</strong> A dance where performers wear traditional blankets, moving rhythmically to drum beats.</li>
-    <li><strong>Traditional Drum Music:</strong> Percussion music using Basotho drums, essential in dance performances and ceremonies.</li>
+    <li><strong>Lekope Music:</strong> Percussion music using Basotho drums, essential in dance performances and ceremonies.</li>
     <li><strong>Wedding Dance:</strong> A joyous dance performed during Basotho wedding ceremonies, celebrating union and community.</li>
-    <li><strong>Natural Grass Basket Music:</strong> Music inspired by the sounds of traditional Basotho crafts, incorporating natural elements.</li>
-    <li><strong>Basotho Warrior Dance:</strong> A dance symbolizing bravery and heritage, performed by men in traditional attire.</li>
+    <li><strong>Ndlamo Dance:</strong> A dance performed by boys during ceremonies as an entertainment refreshment for the audience.</li>
+    <li><strong>Mangae Music:</strong> a music performed by young men when they come back from the initiation school, for the women, babies and grandparents.</li>
   </ol>
 </section>
+
